[package]
name = "longan-nano"
version = "0.3.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
repository = "https://github.com/riscv-rust/longan-nano"
categories = ["embedded", "hardware-support", "no-std"]
description = "Board support package for the Longan Nano board"
keywords = ["riscv", "gd32", "bsp"]
license = "ISC"
edition = "2018"

[package.metadata.docs.rs]
features = ['lcd']
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
embedded-hal = "0.2.7"
nb = "1.0.0"
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
st7735-lcd = { version = "0.8.1", optional = true }
embedded-sdmmc = { version = "0.4.0", optional = true }
usb-device = { version = "0.2.9", optional = true }

[dependencies.gd32vf103xx-hal]
git = "https://github.com/katyo/gd32vf103xx-hal"
branch = "upcoming"

[dev-dependencies]
riscv-rt = "0.11.0"
panic-halt = "0.2.0"
embedded-graphics = "0.7.1"
usbd-serial = "0.1.1"

[dev-dependencies.ushell]
git = "https://github.com/katyo/ushell"
branch = "upcoming"

[features]
lcd = ["st7735-lcd"]
sdcard = ["embedded-sdmmc"]
usb = ["gd32vf103xx-hal/usb_fs", "usb-device"]

[[example]]
name = "display"
required-features = ["lcd"]

[[example]]
name = "ferris"
required-features = ["lcd"]

[[example]]
name = "sdcard_test"
required-features = ["sdcard"]

[[example]]
name = "led_shell_usb"
required-features = ["usb"]

[[example]]
name = "serial_usb"
required-features = ["usb"]

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
#panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release]
opt-level = "s"
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
